# nds_sound_render_fluidsynth

./: Cargo.toml  Unimplemented.txt  build.rs
libs/: wrapper.h
libs/lib/: fluidsynth.exp  fluidsynth.lib
src/: lib.rs  main.rs  math.rs  mixer.rs  play.rs
src/mixer/: vst2.rs
