[package]
name = "nds_sound_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
glob = "0.3.1"
hound = "3.5.0"
tinyaudio = "0.1.1"
fft_sound_convolution = { path = "../fft_sound_convolution" }

[build-dependencies]
bindgen = "0.66.1"