[package]
name = "nds_sound_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
glob = "0.3.1"
hound = "3.5.0"
tinyaudio = "0.1.1"
fft_sound_convolution = { version = "0.1.8", features = ["slice-ring-buffer"] }
indexmap = "2.0.0"
vst = "0.4.0"
lazy_static = "1.4.0"
slice-ring-buffer = "0.3.2"

[build-dependencies]
bindgen = "0.66.1"
